--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -99,19 +99,26 @@ ul {
   -moz-animation-duration: 1s;
   // visibility: hidden;
 
+  &.homeNav {
+    ul li a span {
+      color: $gray;
+    }
+  }
+
   ul {
     padding: 0;
     margin: 0;
+    line-height: 1.4;
 
     li {
       list-style-type: none;
       a {
         display: block;
-        color: $gray;
+        color: #fff;
         text-decoration: none;
 
         span {
-          color: $gray;
+          color: #fff;
           display: block;
           position: relative;
           padding: 2px 0;
