--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -10,6 +10,23 @@
   justify-content: center;
   align-items: center;
 
+  .left {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    color: $green;
+
+    &:after {
+      content: "";
+      display: block;
+      width: 1px;
+      height: 100vh;
+      background-color: $green;
+      margin: 0px auto;
+      transition: height ease-in-out .5s;
+    }
+  }
+
   #main {
     padding: 20px;
 
@@ -17,7 +34,7 @@
       text-align: center;
 
       h1 {
-        font-family: $font-stack-primary;
+        font-family: $font-stack-secondary;
         font-size: 4em;
         font-weight: 400;
         color: #000;
