--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -43,16 +43,35 @@ ul {
 
 .btn {
 	color: #fff;
-	padding: 10px 25px;
-	border: 2px solid #fff;
+	padding: 18px 23px;
+  border: 2px solid #fff;
+  border-radius: 2px;
 	display: inline-block;
-	transition: color ease-in .3s;
-	transition: background-color ease-in .3s;
+	transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;;
 
 	&:hover, &:focus {
-		background: #fff;
-		color: $green;
+    background: rgba(255,255,255,0.7);
+    background-color: rgba(100, 255, 218, 0.07);
+		color: #fff;
 	}
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+
+  .col {
+    flex-basis: 0;
+    flex-grow: 1;
+    max-width: 100%;
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
 }
 
 /*-----------------------------------------------------
