--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -13,6 +13,7 @@
 
 
     h1 {
+			font-family: $font-stack-secondary;
       font-size: 3rem;
       font-weight: 400;
       margin-bottom: .5rem;
