--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@ body {
   font-family: $font-stack-primary;
   -webkit-overflow-scrolling: touch;
   -webkit-font-smoothing: antialiased;
+  height: 100%;
 }
 
 a {
@@ -163,7 +164,56 @@ ul {
             transition: 0s;
           }
         }
+
+        &.active span {
+          font-weight: 700;
+        }
       }
     }
   }
+}
+
+
+/*-----------------------------------------------------
+|	Mobile 
+-----------------------------------------------------*/
+@media (max-width: 768px) {
+
+  body {
+    padding-bottom: 50px;
+  }
+
+  #site-navigation {
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: auto;
+    bottom: 0;
+    background: $green;
+    padding: 10px 15px;
+    z-index: 99;
+
+    ul {
+      display: flex;
+      justify-content: center;
+
+      li {
+        margin: 0 15px;
+      }
+    }
+
+    &.homeNav {
+      ul li a span {
+        color: #fff;
+      }
+    }
+  }
+
+  .about-wrapper, .workpage-wrapper {
+
+    #main {
+      width: 100%;
+    }
+  }
+
 }
