add scrol animations

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -88,8 +88,12 @@
         margin-bottom: 35px;
 			}
 		
-			ul.cols li br {
-        display: block;
+			ul.cols li {
+        line-height: 1.1;
+        
+        br {
+          display: block;
+        }
 			}
 		}
   }
