--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -124,12 +124,7 @@ ul {
   -webkit-animation-duration: 1s;
   -moz-animation-duration: 1s;
   // visibility: hidden;
-
-  &.homeNav {
-    ul li a span {
-      color: $gray;
-    }
-  }
+  color: $gray;
 
   ul {
     padding: 0;
@@ -140,11 +135,11 @@ ul {
       list-style-type: none;
       a {
         display: block;
-        color: #fff;
+        color: $gray;
         text-decoration: none;
 
         span {
-          color: #fff;
+          color: $gray;
           display: block;
           position: relative;
           padding: 2px 0;
@@ -215,4 +210,93 @@ ul {
     }
   }
 
+}
+
+/*-----------------------------------------------------
+|	Dark Mode 
+-----------------------------------------------------*/
+body.light-mode {
+  background-color: #fff;
+  color: #333;
+  transition: background-color 0.3s ease;
+}
+
+body.dark-mode {
+  background-color: #10171d;
+  color: #dfdfdf;
+
+  .dark-mode-toggle > button {
+    color: #999;
+    &:last-child {
+      color: lightblue;
+    }
+  }
+}
+
+
+.dark-mode-toggle {
+  display: flex;
+  margin: 0 auto;
+  position: absolute;
+  top: 15px;
+  right: 12px;
+
+  & > button {
+    font-size: 1.2em;
+    background: none;
+    border: none;
+    color: $green;
+    cursor: pointer;
+    transition: color 0.3s ease;
+    &:last-child {
+      color: #666;
+    }
+
+    &:focus {
+      outline: none;
+    }
+  }
+}
+
+.toggle-control {
+  position: relative;
+  padding: 0 4px;
+  display: flex;
+  align-items: center;
+}
+
+input[type='checkbox'].dmcheck {
+  width: 40px;
+  height: 10px;
+  background: #555;
+  position: relative;
+  border-radius: 5px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  cursor: pointer;
+  vertical-align: 2px;
+  outline: none;
+
+  &:checked + label {
+    left: 30px;
+  }
+
+  &:focus-visible {
+    outline: solid 2px white;
+  }
+
+  & + label {
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    position: absolute;
+    left: 2px;
+    background: #fff;
+    opacity: 0.9;
+    background-color: #f6f6f6;
+  }
 }
