--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -97,7 +97,7 @@ ul {
 
     a {
       display: flex;
-      align-items: baseline;
+      align-items: center;
 
       i {
         color: $green;
@@ -268,7 +268,7 @@ body.dark-mode {
 }
 
 input[type='checkbox'].dmcheck {
-  width: 40px;
+  width: 30px;
   height: 10px;
   background: #555;
   position: relative;
@@ -281,7 +281,7 @@ input[type='checkbox'].dmcheck {
   outline: none;
 
   &:checked + label {
-    left: 30px;
+    left: 25px;
   }
 
   &:focus-visible {
