--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -100,6 +100,19 @@
 }
 
 /*-----------------------------------------------------
+|	Light Mode 
+-----------------------------------------------------*/
+body.light-mode {
+  .about-wrapper {
+
+    #main .btn {
+      color: #000;
+      border-color: #000;
+    }
+  }
+}
+
+/*-----------------------------------------------------
 |	Dark Mode 
 -----------------------------------------------------*/
 body.dark-mode {
