--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -22,6 +22,18 @@
   }
 }
 
+@keyframes fadeInUp {
+  from {
+    transform: translate3d(0, 5px, 0);
+    opacity: 0;
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+    opacity: 1
+  }
+}
+
 @keyframes float {
 	0% {
 		transform: translatey(0px);
