--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -97,7 +97,7 @@
             align-items: center;
             justify-content: center;
             font-size: 1.6em;
-            cursor: pointer;
+            cursor: inherit;
             border-radius: 48% 52% 68% 32% / 42% 28% 72% 58%;
             animation: 
               blobber 30s 0s linear infinite,
@@ -144,8 +144,33 @@
                   }
 
                   .resume-block {
-                    span {
-                      margin-right: 8px;
+                    margin: 8px 0;
+
+                    a {
+                      display: inline-block;
+                      text-decoration: none;
+                      padding: 8px 16px;
+                      border: 2px solid white;
+                      border-radius: 4px;
+                      background: rgba(255,255,255,0.3);
+                      font-family: "Hind", sans-serif;
+                      cursor: inherit;
+                      position: relative;
+                      transition: all ease-in .5s;
+
+                      &:hover {
+                        svg {
+                          transform: translate(1px, -1px);
+                        }
+                        span {
+                          animation: fadeInUp .2s ease-in;
+                        }
+                      }
+
+                      span {
+                        margin-right: 8px;
+                        display: inline-block;
+                      }
                     }
                   }
                 }
