--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -195,25 +195,33 @@
 
                   a {
                     display: inline-block;
-                    text-decoration: none;
-                    padding: 8px 16px;
-                    border: 2px solid white;
-                    border-radius: 4px;
-                    background: rgba(255,255,255,0.3);
-                    font-family: "Hind", sans-serif;
+                    margin-top: 8px;
+                    color: #000;
                     cursor: pointer;
-                    position: relative;
-                    transition: all ease-in .5s;
+                    border: 1px solid #000;
+                    border-radius: 4px;
+                    padding: 0.8em 1.5em;
+                    background: #fff;
+                    transition: 0.2s;
+
                     &:hover {
-                      svg {
-                        transform: translate(1px, -1px);
-                      }
-                      span {
-                        animation: fadeInUp .2s ease-in;
-                      }
+                      color: #000;
+                      transform: translate(-0.25rem, -0.25rem);
+                      background: #fff;
+                      box-shadow: 0.25rem 0.25rem #000;
                     }
+
+                    &:focus:not(:active) {
+                      box-shadow: rgba(72, 95, 199, .25) 0 0 0 .125em;
+                    }
+
+                    &:active {
+                      transform: translate(0);
+                      box-shadow: none;
+                    }
+
                     span {
-                      margin-right: 8px;
+                      margin-right: 10px;
                       display: inline-block;
                     }
                   }
